...
    <string name="end_time">End time</string>
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="movies">Movies</string>
    <string name="device_info">Device Information</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
    <string name="named_message" translatable="false">%1$s \'%2$s\'</string>
    <string name="zap">Zap</string>
    <string name="browse_epg">Browse EPG</string>
...
    <string name="login">Login</string>
    <string name="defaultOnNoWifi">Is default profile on no Wifi</string>
    <string name="login_enabled">Enable Login</string>
    <string name="current_service">Now</string>
    <string name="provider">Provider</string>
    <string name="now">Now</string>
    <string name="next">Next</string>
    <string name="epg_search">EPG-Search</string>
    <string name="epg_search_hint">Search EPG</string>
    <string name="epg_search_cached_hint">Offline results: only bouquets opened on this device are searched.</string>
    <string name="epg_search_no_cached_match">No match in the bouquets opened on this device.</string>
    <string name="epg_search_recent">Recent searches</string>
    <string name="epg_search_recent_remove">Remove from recent searches</string>
    <string name="epg_search_prompt">Search programme titles. Results appear as you type.</string>
    <string name="epg_search_back">Back</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="remote_widget_config_title_style">Select the style of the remote control</string>
    <string name="remote_widget_config_title_profile">Select the profile to use with the widget</string>
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
...
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="license_gplv3">LICENSE:\nDreamDroid is free Software!\nLicensed under the GNU General Public License 3 https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="source_code_link">Source code available at: http://github.com/sreichholf/dreamDroid</string>
    <string name="connection">Connection</string>
    <string name="not_available">Not available</string>
    <string name="checking">checking&#8230;</string>
    <string name="checking_connection">Checking connection&#8230;</string>
    <string name="session_online">Online</string>
    <string name="session_offline">Offline</string>
    <string name="session_checking">Checking</string>
    <string name="session_needs_receiver">Needs the receiver</string>
    <string name="session_needs_receiver_long">Connect to the receiver to use this.</string>
...
    <string name="encoder_pass">Encoder password</string>
    <string name="dynamic_theme_colors_long">Use dynamic theme colors\nChanging this will RESTART the app!</string>
    <string name="dynamic_theme_colors">Dynamic theme colors</string>
    <string name="trust_all_certs">All certificates</string>
    <string name="trust_all_certs_confirm_title">Trust all certificates?</string>
    <string name="trust_all_certs_confirm">dreamDroid will not verify this profile\'s HTTPS certificate. Use this only for self-signed certificates on your own receiver. This can be dangerous.</string>
    <string name="setup_welcome">Welcome!</string>
    <string name="setup_start">Start</string>
    <string name="setup_back">Back</string>
    <string name="setup_next">Next</string>
    <string name="setup_check_connection">Check connection</string>
    <string name="setup_retry">Retry</string>
    <string name="setup_find_title">Find your receiver</string>
    <string name="setup_find_body">dreamDroid looks for a receiver on this network. You can also type its address.</string>
    <string name="setup_searching">Looking for receivers…</string>
    <string name="setup_none_found">No receiver found on this network.</string>
    <string name="setup_address">Address</string>
    <string name="setup_lan_denied">Local network access is off. Type the receiver address to continue.</string>
    <string name="setup_connection_title">Connection</string>
    <string name="setup_connection_body">Use HTTP on port 80 unless the WebInterface is HTTPS.</string>
    <string name="setup_http">HTTP</string>
    <string name="setup_https">HTTPS</string>
    <string name="setup_sign_in_title">Sign in</string>
    <string name="setup_sign_in_body">Most receivers use root and dreambox. Turn login off if the WebInterface does not ask for a password.</string>
    <string name="setup_name_title">Name</string>
    <string name="setup_name_body">This name is shown in the profile list.</string>
    <string name="setup_test_body">dreamDroid contacts the receiver before saving.</string>
    <string name="setup_connected">The receiver answered.</string>
...
